--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@
 locale                   : "en-US"
 title                    : "Current Directory of Dipok Chandra Das"
 title_separator          : "-"
-name                     : &name "Dipok"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : &name "Dipok Chandra Das"
+description              : &description "Assistant Professor at NSTU"
+url                      : https://cd-dpk.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "cd-dpk.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -22,13 +22,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  name             : "Dipok Chandra Das"
+  pronouns         : # example: "he/his"  
+  bio              : "Assistant Professor at NSTU"
+  location         : ""
+  employer         : "NSTU"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "dipok.iit@nstu.edu.bd" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
