--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,21 +4,15 @@
 # links. Removing a link prevents it from showing in the header, but does not
 # prevent it from being included in the site.
 
-main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
+main:  
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "Projects"
+    url: /projects/
+    
+  - title: "Publications"
+    url: /publications/
     
   - title: "CV"
     url: /cv/
