--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Current Directory of Dipok Chandra Das"
+title                    : "$ cd Dipok"
 title_separator          : "-"
 name                     : &name "Dipok Chandra Das"
 description              : &description "Assistant Professor at NSTU"
@@ -25,26 +25,26 @@ author:
   name             : "Dipok Chandra Das"
   pronouns         : # example: "he/his"  
   bio              : "Assistant Professor at NSTU"
-  location         : ""
+  location         : "Noakhali, Bangladesh"
   employer         : "NSTU"
   uri              : # URL
   email            : "dipok.iit@nstu.edu.bd" 
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
+#  arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
-  scopus           : # URL
+ # impactstory      : # URL
+ # orcid            : "http://orcid.org/yourorcidurl"
+ # semantic         : # URL
+ # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+ # researchgate     : # URL
+ # scopus           : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "cd-dpk"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
