--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
 
   # Academic websites
 #  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=z_CcZh0AAAAJ"
  # impactstory      : # URL
  # orcid            : "http://orcid.org/yourorcidurl"
  # semantic         : # URL
@@ -49,7 +49,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # "bsky.app"  Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
