--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ author:
   pronouns         : # example: "he/his"  
   bio              : "Assistant Professor at NSTU"
   location         : "Noakhali, Bangladesh"
-  employer         : "NSTU"
-  uri              : # URL
+  employer         : "Noakhali Science and Technology University"
+  uri              : "https://nstu.edu.bd/"
   email            : "dipok.iit@nstu.edu.bd" 
 
   # Academic websites
