--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "$ cd Dipok"
 title_separator          : "-"
 name                     : &name "Dipok Chandra Das"
-description              : &description "Assistant Professor at NSTU"
+description              : &description "Assistant Professor at Noakhali Science and Technology University"
 url                      : https://cd-dpk.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "cd-dpk.github.io"
@@ -24,7 +24,7 @@ author:
   avatar           : "profile-dpk.png"
   name             : "Dipok Chandra Das"
   pronouns         : # example: "he/his"  
-  bio              : "Assistant Professor at NSTU"
+  bio              : "Assistant Professor at Noakhali Science and Technology University"
   location         : "Noakhali, Bangladesh"
   employer         : "Noakhali Science and Technology University"
   uri              : "https://nstu.edu.bd/"
